@@ -31,11 +31,15 @@ class CoreExtTest < Test::Unit::TestCase
   end
 
   def test_range_as_json
-    assert_equal [1,2,3], (1..3).as_json
+    assert_equal [1,3], (1..3).as_json
   end
 
   def test_range_to_json
-    assert_equal '[1, 2, 3]', (1..3).to_json(nil)
+    assert_equal '[1, 3]', (1..3).to_json(nil)
+  end
+
+  def test_range_as_json_with_floats
+    assert_equal [0.5,5.5], (0.5..5.5).as_json
   end
 end
 
