@@ -1,6 +1,7 @@
 == 3.0.0.beta.8
   addError and removeError are not callbacks
   test against more versions of jQuery
+  resolved issue 19, handling ranges with floats
 
 == 3.0.0.beta.7
   Significant changes required a move back to beta
